unpackaged/main/default/objects/Email_History__c/Email_History__c.object-meta.xml
<CustomObject>
    <label>Email History</label>
    <nameField>
        <displayFormat>HIST-{0000}</displayFormat>
        <label>Email History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>