unpackaged/main/default/objects/Email_History__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email Histories</relationshipLabel>
    <relationshipName>Email_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>