unpackaged/main/default/objects/Email_History__c/fields/Clicked__c.field-meta.xml
<CustomField>
    <fullName>Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clicked</label>
    <type>Checkbox</type>
</CustomField>