unpackaged/main/default/objects/Email_History__c/fields/Date_Time_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Shipping__c</fullName>
    <label>Date Time Shipping</label>
    <type>DateTime</type>
</CustomField>