unpackaged/main/default/objects/Email_History__c/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <description>email + campaignId + messageId</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>